--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 # History files
+.RData
 .Rhistory
 .Rapp.history
 
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
+*.Rproj
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+.Rproj.user
+# packrat libraries
+packrat/lib*/
