Updated package for Blog
Updated examples and descriptions, fixed plot/summary, fixed
GitHub-package.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ Maintainer: Emiel Veersma <emiel.veersma@veneficus.nl>
 Description: The vfmodel-package is a larger package used internally by Veneficus. This package is just a snippet of the code to support the readers of the blogs of Veneficus.
 License: GPL-3
 Imports: strucchange,
-     ggplot2
+     ggplot2,
+	 gridExtra
 Suggests: testthat
