--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(plot_model.time_series)
 export(predict_model.time_series)
 export(summary_model.time_series)
 import(ggplot2)
+importFrom(gridExtra,grid.arrange)
 importFrom(strucchange,breakpoints)
